Hexdumps working, moving to -d and -h

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,12 @@
             "name": "Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/main",
+            "program": "${workspaceFolder}/hexdumputility",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
-            "externalConsole": true,
-            "preLaunchTask": "build",
+            "externalConsole": false,
             "linux": {
                 "MIMode": "gdb"
             },
